--- a/locale/es_ES/locale.po
+++ b/locale/es_ES/locale.po
@@ -24,31 +24,31 @@ msgid "plugins.themes.material.option.typography.description"
 msgstr "Elija una combinación de fuentes que se adapte a esta revista."
 
 msgid "plugins.themes.material.option.typography.notoSans"
-msgstr "Noto Sans: Una fuente digital nativa diseñada by Google para un extenso soporte de lenguaje."
+msgstr "Noto Sans: Una fuente digital nativa diseñada por Google para un extenso soporte de lenguaje."
 
 msgid "plugins.themes.material.option.typography.notoSerif"
 msgstr "Noto Serif: Una variante serif de Google de la fuente nativa digital."
 
 msgid "plugins.themes.material.option.typography.notoSerif_notoSans"
-msgstr "Noto Serif/Noto Sans: A complementary pairing with serif headings and sans-serif body text."
+msgstr "Noto Serif/Noto Sans: Una combinación complementaria con encabezados serif y cuerpo de texto sans-serif."
 
 msgid "plugins.themes.material.option.typography.notoSans_notoSerif"
-msgstr "Noto Sans/Noto Serif: A complementary pairing with sans-serif headings and serif body text."
+msgstr "Noto Sans/Noto Serif: Una combinación complementaria con encabezados sans-serif y cuerpo de texto serif."
 
 msgid "plugins.themes.material.option.typography.lato"
-msgstr "Lato: A popular modern sans-serif font."
+msgstr "Lato: Una popular fuente sans-serif moderna."
 
 msgid "plugins.themes.material.option.typography.lora"
-msgstr "Lora: A wide-set serif font good for reading online."
+msgstr "Lora: Una amplia gama de fuentes serif, buena para leer en línea."
 
 msgid "plugins.themes.material.option.typography.lora_openSans"
-msgstr "Lora/Open Sans: A complimentary pairing with serif headings and sans-serif body text."
+msgstr "Lora/Open Sans: Una combinación complementaria con encabezados serif y cuerpo de texto sans-serif."
 
 msgid "plugins.themes.material.option.colour.label"
-msgstr "Colour"
+msgstr "Color"
 
 msgid "plugins.themes.material.option.colour.description"
-msgstr "Choose a colour for the header."
+msgstr "Seleciona el color del encabezado."
 
 msgid "plugins.themes.material.option.showDescriptionInJournalIndex.option"
 msgstr "Mostrar el resumen de la revista en la página de inicio."
@@ -57,7 +57,7 @@ msgid "plugins.themes.material.option.useHomepageImageAsHeader.label"
 msgstr "Imagen de Fondo del Encabezado"
 
 msgid "plugins.themes.material.option.useHomepageImageAsHeader.description"
-msgstr "When a homepage image has been uploaded, display it in the background of the header instead of it's usual position on the homepage."
+msgstr "Cuando se haya cargado una imagen de la página de inicio, mostrar en el fondo del encabezado en lugar de su posición habitual en la página de inicio."
 
 msgid "plugins.themes.material.option.useHomepageImageAsHeader.option"
 msgstr "Mostrar la imagen de la página de inicio como fondo del encabezado."
